refactor: reorganize project for portable build/run
- Add Maven wrapper (mvnw) -- no Maven install needed
- Add exec-maven-plugin: ./mvnw compile exec:java runs game
- Cross-platform LWJGL3 natives via OS-activated Maven profiles
- Add asset download script (scripts/download_assets.py)
- Add .mvn/jvm.config with --add-opens flags for Java 17
- Rewrite README with quick start and cross-platform docs
- Clean .gitignore: exclude assets, saves, logs, crash dumps
- Remove tracked clutter: test_natives, log files, old bat script

Also includes pending display fixes:
- Fix resize crash: use direct IntBuffers for GLFW calls
- Fix stretched UI: use glfwGetWindowSize not glfwGetFramebufferSize
- Fix F11: use isRepeatEvent() not getEventKeyState()
- Fix fullscreen cursor mismatch: update Mouse.displayHeight